# neotermcolor

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
neotermcolor/: __init__.py
